# slack-ai-chat-prototype

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: logging_.py  main.py  orchestrator.py  settings.py
app/cleansing/: demask.py  gemini_filter.py  presidio.py
app/exports/: models.py  sheets_webhook.py
app/llm/: gemini.py  prompt.py
app/session/: models.py  store_firestore.py
app/slack/: events.py  reply.py  verify.py
apps-script/slack-ai-chat-demo-sheets-webhook/: Code.gs  README.md  appsscript.json
docs/: verification-firestore-thread-mask.md
docs/session-notes/: 2026-04-15-progress-learning-decisions.md
docs/superpowers/plans/: 2026-04-14-slack-ai-chat-with-pii-cleansing-implementation-plan.md  2026-04-15-demo-gemini-filter-sheets-implementation-plan.md  2026-04-16-demo-mode-search-and-mask-output.md
docs/superpowers/runbooks/: 2026-04-14-personal-deploy-and-demo.md
docs/superpowers/specs/: 2026-04-14-slack-ai-chat-with-pii-cleansing-design.md  2026-04-15-demo-gemini-filter-and-sheets-design.md  (+1 more)
tests/: test_cleansing_presidio.py  test_demask_policy_p0.py  test_firestore_database_id.py  test_gemini_filter_parse.py  test_gemini_wrapper.py  test_logging_slack_ingest.py  test_orchestrator_unit.py  test_prompt_assembly.py  test_reply_formatting.py  test_session_models.py  test_settings.py  test_sheets_webhook_client.py  test_slack_events_endpoint.py  test_slack_events_event_callback.py  test_slack_events_parse.py  test_slack_post_reply.py  test_slack_verify.py  test_smoke.py
